--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ olefile==0.46
 opt-einsum==3.3.0
 paramiko==2.7.2
 pexpect==4.8.0
-Pillow==8.1.2
+Pillow~=8.4.0
 pipreqs==0.4.11
 protobuf==3.12.4
 pyasn1==0.4.8
@@ -123,3 +123,6 @@ xdg==5
 xkit==0.0.0
 yarg==0.1.9
 zipp==1.0.0
+
+gym~=0.21.0
+matplotlib~=3.5.1
